<resources>
    <string name="app_name">ShopOn</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_image">Product Image</string>
    <string name="product_price">Price: Rs %1$.2f</string>
    <string name="buy_product">Buy Product</string>
    <string name="checkout">Checkout</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="thank_you">Thank You</string>
    <string name="thank_you_message">Thank you for purchasing %1$s. You will soon get an email confirming the order. Your product will be shipped within 4-5 days</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="order_total">Order Total: Rs %1$.2f</string>

</resources>